apps/base/invidious/inv-sig-helper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inv-sig-helper
  namespace: app-invidious
spec:
  revisionHistoryLimit: 2
  replicas: 0
  selector:
    matchLabels:
      app: inv-sig-helper
  template:
    metadata:
      labels:
        app: inv-sig-helper
    spec:
      containers:
        - name: inv-sig-helper
          image: quay.io/invidious/inv-sig-helper:master-dcda9f1
          imagePullPolicy: IfNotPresent
          args: ["--tcp", "0.0.0.0:12999"]
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 12999
              name: http
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: inv-sig-helper
  namespace: app-invidious
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 12999
      targetPort: http
  selector:
    app: inv-sig-helper
