apps/base/invidious/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: invidious
  namespace: app-invidious

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`invidious.cluster.arpa`)
      kind: Rule
      services:
        - name: invidious
          namespace: app-invidious
          port: 3000
  tls:
    secretName: traefik-tls
